# CleanEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp  options.toml  version.h.in
data/: base.gar
data/models/: pistol.fbx  shotgun.fbx
data/scripts/: cube_demo.lua  init.lua  models.lua  pbr_demo.lua
data/shaders/: shadow.vsh  shadow_map_vis.psh  shadow_map_vis.vsh  structures.fxh  texture.psh  texture.vsh
include/: argparse.hpp  audiomanager.hpp  bulletphysicsmanager.hpp  camera3d.hpp  debuglogger.hpp  dummyaudiomanager.hpp  dummylogger.hpp  dummymaterialmanager.hpp  dummyphysicsmanager.hpp  dummyrenderer.hpp  dummyscriptengine.hpp  dummyuimanager.hpp  enginecore.hpp  enginecoreglfw.hpp  entity.hpp  eventmanager.hpp  fmodaudiomanager.hpp  glmaterial.hpp  glshader.hpp  imageloader.hpp  imguivkuimanager.hpp  logger.hpp  luascriptengine.hpp  material.hpp  materialmanager.hpp  modelmanager.hpp  openglrenderer.hpp  physicsmanager.hpp  renderer.hpp  resourcemanager.hpp  scene3d.hpp  scenemanager.hpp  scriptengine.hpp  servicelocator.hpp  shader.hpp  staticmesh.hpp  uimanager.hpp  vk_image_shader.hpp  vkmaterial.hpp  vkshader.hpp  (+1 more)
include/GLFW/: glfw3.h
include/LuaBridge/detail/: Namespace.h
include/client/: audiomanager.hpp  dummyaudiomanager.hpp  dummygameclient.hpp  dummygameservices.hpp  dummyrenderer.hpp  dummyuimanager.hpp  fmodaudiomanager.hpp  gameclient.hpp  gameclientglfw.hpp  gamefrontend.hpp  gamefrontendglfw.hpp  gamerendererdiligent.hpp  imageloader.hpp  imguivkuimanager.hpp  inputmanager.hpp  material.hpp  materialmanager.hpp  openalaudiomanager.hpp  renderer.hpp  steamgameservices.hpp  uimanager.hpp  vkmaterial.hpp  vkshader.hpp  vulkanrenderer.hpp
include/client/shaders/: vk_color_shader.hpp  vk_pbr_specular_shader.hpp
include/client/ui/: uibutton.hpp  uielement.hpp  uilabel.hpp  uispinbox.hpp  uitextinput.hpp
include/common/: cfgpath.hpp  debuglogger.hpp  dirty_flag.hpp  dummylogger.hpp  dummyscriptengine.hpp  dummyservices.hpp  eventmanager.hpp  gameservices.hpp  logger.hpp  luascriptengine.hpp  modelmanager.hpp  resourcemanager.hpp  scriptengine.hpp  servicelocator.hpp  steamservices.hpp  utils.hpp
include/common/3d/: animationprimitive.hpp  meshprimitive.hpp  modelprimitive.hpp
include/common/entities/: animatedmodel.hpp  bodycomponent.hpp  bulletbodycomponent.hpp  camera3d.hpp  component.hpp  entity.hpp  meshcomponent.hpp  networksynccomponent.hpp  staticmesh.hpp
include/common/importers/: w3dimporter.hpp
include/common/importers/w3d/: defines.hpp  enum.hpp  loader.hpp  struct.hpp
include/common/loaders/: basicresourceloader.hpp  bigresourceloader.hpp  fileresourceloader.hpp  zipresourceloader.hpp
include/server/: bulletphysicsmanager.hpp  dummyphysicsmanager.hpp  gamebackend.hpp  gameserver.hpp  gameserverenet.hpp  physicsmanager.hpp  physxphysicsmanager.hpp  scene3d.hpp  scenemanager.hpp
libs/: cfgpath.h
libs/dds/: dds.h
libs/imgui_backends/include/: imgui_impl_vulkan.h
libs/imgui_backends/src/: imgui_impl_vulkan.cpp
src/: audiomanager.cpp  bulletphysicsmanager.cpp  camera3d.cpp  debuglogger.cpp  dummyaudiomanager.cpp  dummylogger.cpp  dummymaterialmanager.cpp  dummyphysicsmanager.cpp  dummyrenderer.cpp  dummyscriptengine.cpp  dummyuimanager.cpp  enginecore.cpp  enginecoreglfw.cpp  entity.cpp  eventmanager.cpp  fmodaudiomanager.cpp  glmaterial.cpp  glshader.cpp  imageloader.cpp  imguivkuimanager.cpp  logger.cpp  luascriptengine.cpp  material.cpp  materialmanager.cpp  modelmanager.cpp  openglrenderer.cpp  renderer.cpp  resourcemanager.cpp  scene3d.cpp  scenemanager.cpp  servicelocator.cpp  staticmesh.cpp  uimanager.cpp  vk_color_shader.cpp  vk_image_shader.cpp  vkmaterial.cpp  vkshader.cpp  vulkanrenderer.cpp
src/client/: dummyaudiomanager.cpp  dummygameclient.cpp  dummygameservices.cpp  dummyrenderer.cpp  dummyuimanager.cpp  eventmanager.cpp  fmodaudiomanager.cpp  gameclient.cpp  gameclientglfw.cpp  gamefrontend.cpp  gamefrontendglfw.cpp  gamerendererdiligent.cpp  imageloader.cpp  imguivkuimanager.cpp  inputmanager.cpp  materialmanager.cpp  openalaudiomanager.cpp  steamgameservices.cpp  uimanager.cpp  vkmaterial.cpp  vkshader.cpp  vulkanrenderer.cpp
src/client/shaders/: vk_color_shader.cpp  vk_image_shader.cpp  vk_pbr_specular_shader.cpp
src/client/ui/: uibutton.cpp  uielement.cpp  uilabel.cpp  uispinbox.cpp  uitextinput.cpp
src/common/: cfgpath.cpp  debuglogger.cpp  dummylogger.cpp  dummyscriptengine.cpp  dummyservices.cpp  eventmanager.cpp  logger.cpp  luascriptengine.cpp  modelmanager.cpp  resourcemanager.cpp  servicelocator.cpp  steamservices.cpp  utils.cpp
src/common/3d/: animationprimitive.cpp  meshprimitive.cpp  modelprimitive.cpp
src/common/entities/: animatedmodel.cpp  bodycomponent.cpp  bulletbodycomponent.cpp  camera3d.cpp  component.cpp  entity.cpp  meshcomponent.cpp  networksynccomponent.cpp  staticmesh.cpp
src/common/importers/: w3dimporter.cpp
src/common/importers/w3d/: loader.cpp  struct.cpp
src/common/loaders/: bigresourceloader.cpp  fileresourceloader.cpp  zipresourceloader.cpp
src/server/: bulletphysicsmanager.cpp  dummyphysicsmanager.cpp  gamebackend.cpp  gameserverenet.cpp  physxphysicsmanager.cpp  scene3d.cpp  scenemanager.cpp
